# psr-deploy-keys-for-protected-branches

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: automated_releases.yml
psr_deploy_keys_for_protected_branches/: main.py
