[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "psr-deploy-keys-for-protected-branches"
version = "0.0.1"
description = "A repository for illustrating how to bypass deploy key restrictions on protected branches for PSR projects."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["python-semantic-release (>=10.5.2,<11.0.0)"]

[tool.poetry]
package-mode = false


[tool.semantic_release]
version_toml = [
  "pyproject.toml:project.version",
]
branch = "main"
upload_to_pypi = false
upload_to_repository = false
upload_to_release = true
build_command = ""
version_source = "tag"
commit_version_number = true
commit_message = "chore(release): {version} [skip ci]"
assets = [  ]
build_command_env = [  ]
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = false
no_git_verify = true
tag_format = "v{version}"

# Main release branch
[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

# Pre-release branches for feature development
[tool.semantic_release.branches.alpha]
match = "^(feat|feature|fix|perf)/.+"
prerelease = true
prerelease_token = "alpha"

# Test/development pre-release branches
[tool.semantic_release.branches.beta]
match = "^(test|dev)/.+"
prerelease = true
prerelease_token = "beta"

# Changelog configuration
[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"
template_dir = "templates"
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = true

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = [  ]
autoescape = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
minor_tags = [ "feat"]
patch_tags = [ "fix", "perf" ]
other_allowed_tags = [ "build", "chore", "ci", "docs", "style", "refactor", "test" ]
allowed_tags = [ "feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test" ]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.remote]
name = "origin"
type = "github"
token = { env = "GITHUB_TOKEN" }
ignore_token_for_push = true
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = [ "dist/*" ]
upload_to_vcs_release = true
